sciencix_sale/static/less/change_report_layout.less
.o_report_layout_clean{
    table.table-totals {
        thead {
            tr th:last-child {
                text-align: left !important;
            }
        }
        tbody {
            tr {
                td:first-child {
                    text-align: right !important;
                }
                td:last-child {
                    text-align: left !important;
                }
            }
        }
    }
    table {
        thead {
            tr th:first-child {
                width: auto !important;
            }
        }
    }
    .bank-box {
        width: 60% !important;

        td {
            padding-top: 5px;
            padding-bottom: 5px;
        }

        td:last-child {
            text-align: left !important;
        }
    }
    .clearfix {
        page-break-inside: avoid !important;
    }

    .col-xs-4 {
        width: 33% !important;
    }
    table.table-clean {
        tr td {
            padding: 0 !important;
            border-bottom: 0 !important;
        }
    }
}

